# lampe

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  Makefile  README.md  action.yaml  conftest.py  docker-compose.langfuse.yml  mkdocs.yml  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: docs.yml  pr_description.yml  pr_review.yml  pre-commit.yml  pyright.yml  pytest.yml  semantic_pull_request.yml  semantic_release.yml
docs/: CHANGELOG.md  contributing.md  github-pages-setup.md  index.md  reference.md
docs/lampe-ci/: bitbucket-pipelines.md  github-actions.md  gitlab-ci.md  index.md
docs/lampe-cli/: cli.md  index.md
docs/lampe-sdk/: cli.md  core.md  describe.md  index.md  template.md
docs/templates/docs/: CHANGELOG.md.j2
gh_action/scripts/: fetch_through_merge_base.sh  run_lampe.sh
github-issues/: README.md
src/lampe/core/: __init__.py  config.py  envconfig.py  gitconfig.py  langfuseconfig.py  llmconfig.py  loggingconfig.py  maskingconfig.py
src/lampe/core/data_models/: __init__.py  issue.py  pull_request.py  repository.py
src/lampe/core/parsers/: __init__.py  markdown_code_block_remover_output.py  utils.py  yaml_pydantic_output.py
src/lampe/core/tools/: __init__.py
src/lampe/core/tools/llm_integration/: __init__.py  tool_registery.py
src/lampe/core/tools/llm_integration/descriptions/: repository_openai.py
src/lampe/core/tools/repository/: __init__.py  content.py  diff.py  encoding.py  exceptions.py  history.py  management.py  search.py
src/lampe/core/utils/: __init__.py  token.py
src/lampe/core/workflows/: base_parallel.py  function_calling_agent.py
tests/integration/tools/: test_git_get_diff.py  test_local_commits_availability.py  test_search_in_files.py
tests/unit/: test_git_version_check.py  test_llmconfig.py
tests/unit/parsers/: test_markdown_code_block_remover_output.py  test_utils.py  test_yaml_pydantic_output.py
tests/unit/tools/: test_git_clone.py  test_git_get_content.py  test_git_get_diff.py  test_local_commits_availability.py  test_search_in_files.py  test_sparse_clone_detection.py  test_temp_git_repository.py
tests/unit/utils/: test_token.py
tests/unit/workflows/: test_base_parallel.py
